<!--
  ~ /*
  ~  *
  ~  *  * Copyright (c) 2016, Mobilyte Tech India Pvt. Ltd. and/or its affiliates. All rights reserved.
  ~  *  *
  ~  *  * Redistribution and use in source and binary forms, with or without
  ~  *  * modification, are permitted provided that the following conditions are met:
  ~  *  *
  ~  *  *  - Redistributions of source code must retain the above copyright
  ~  *  *    notice, this list of conditions and the following disclaimer.
  ~  *  *
  ~  *  *  - Redistributions in binary form must reproduce the above copyright
  ~  *  *    notice, this list of conditions and the following disclaimer in the
  ~  *  *    documentation and/or other materials provided with the distribution.
  ~  *
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/hintColor" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/button_normal_gradient"
                android:text="@string/registerUser"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/memberText"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize" />

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginUser"
                    android:textColor="@color/newUserColor"
                    android:textSize="@dimen/textSize" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
