<!--
  ~ /*
  ~  *
  ~  *  * Copyright (c) 2016, Mobilyte Tech India Pvt. Ltd. and/or its affiliates. All rights reserved.
  ~  *  *
  ~  *  * Redistribution and use in source and binary forms, with or without
  ~  *  * modification, are permitted provided that the following conditions are met:
  ~  *  *
  ~  *  *  - Redistributions of source code must retain the above copyright
  ~  *  *    notice, this list of conditions and the following disclaimer.
  ~  *  *
  ~  *  *  - Redistributions in binary form must reproduce the above copyright
  ~  *  *    notice, this list of conditions and the following disclaimer in the
  ~  *  *    documentation and/or other materials provided with the distribution.
  ~  *
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/usernameEmail"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/hintColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/forgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgotPassword"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textSize" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <Button
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/button_normal_gradient"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textSize" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:id="@+id/facebook"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/background_facebook_left"
                    android:src="@drawable/facebook" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0005"
                    android:background="@android:color/transparent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="0.7995"
                    android:background="@drawable/background_facebook_rigth"
                    android:gravity="center"
                    android:text="@string/facebookText"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/registerAs"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newUser"
                    android:textColor="@color/newUserColor"
                    android:textSize="@dimen/textSize" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
