<!--
  ~ /*
  ~  *
  ~  *  * Copyright (c) 2016, Mobilyte Tech India Pvt. Ltd. and/or its affiliates. All rights reserved.
  ~  *  *
  ~  *  * Redistribution and use in source and binary forms, with or without
  ~  *  * modification, are permitted provided that the following conditions are met:
  ~  *  *
  ~  *  *  - Redistributions of source code must retain the above copyright
  ~  *  *    notice, this list of conditions and the following disclaimer.
  ~  *  *
  ~  *  *  - Redistributions in binary form must reproduce the above copyright
  ~  *  *    notice, this list of conditions and the following disclaimer in the
  ~  *  *    documentation and/or other materials provided with the distribution.
  ~  *
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/cartList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom" />


    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="10dp">

        <include layout="@layout/cart_price_layout" />

        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/noteHint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/orderNow"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/button_normal_gradient"
                android:minWidth="120dp"
                android:text="@string/orderNow"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/schedule"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/button_normal_gradient"
                android:minWidth="120dp"
                android:text="@string/schedule"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
